--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ crewai = {extras = ["tools"], version = "^0.19.0"}
 pydantic = "^2.6.3"
 load-dotenv = "^0.1.0"
 crewai-tools = "^0.0.15"
+langchain-groq = "^0.0.1"
+duckduckgo-search = "^5.2.2"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
