--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "sparknotes-crewai"
+name = "cold-outreach-crewai"
 version = "0.1.0"
-description = "Extract all the meaningful info from your favorite books"
+description = "Send personalized cold outreach emails to a list of leads."
 authors = ["bhancock_ai <brandon@brandonhancock.io>", "João Moura <joaomdmoura@mgail.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<3.12"
-crewai = {extras = ["tools"], version = "^0.19.0"}
+crewai = {extras = ["tools"], version = "^0.22.5"}
 pydantic = "^2.6.3"
 load-dotenv = "^0.1.0"
 crewai-tools = "^0.0.15"
